--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Google</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/google-icon.png"> 
 </head>
 <body>
     <header>
